--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -8,6 +8,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <style>
     :root {
       --bg-primary: #0a0e17;
@@ -47,6 +49,16 @@
       overflow-x: hidden;
     }
 
+    #bg-canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      opacity: 0.4;
+    }
+
     /* Animated background gradient */
     body::before {
       content: '';
@@ -61,16 +73,6 @@
       animation: bgShift 20s ease-in-out infinite alternate;
       z-index: 0;
       pointer-events: none;
-    }
-
-    /* Subtle noise texture overlay */
-    body::after {
-      content: '';
-      position: fixed;
-      inset: 0;
-      background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='0.03'/%3E%3C/svg%3E");
-      pointer-events: none;
-      z-index: 0;
     }
 
     @keyframes bgShift {
@@ -224,9 +226,9 @@
     /* === Cards === */
     .cards {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 20px;
-      margin-bottom: 32px;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 18px;
+      margin-bottom: 28px;
     }
 
     .card {
@@ -259,9 +261,9 @@
     }
 
     .card:hover {
-      transform: translateY(-6px);
-      box-shadow: var(--shadow-hover), inset 0 1px 0 rgba(255, 255, 255, 0.06);
-      border-color: rgba(255, 255, 255, 0.12);
+      transform: translateY(-4px);
+      box-shadow: var(--shadow-hover);
+      border-color: rgba(255, 255, 255, 0.1);
     }
 
     .card:hover::before {
@@ -359,11 +361,10 @@
     }
 
     .card-value {
-      font-size: 36px;
+      font-size: 34px;
       font-weight: 700;
-      letter-spacing: -1.5px;
+      letter-spacing: -1px;
       line-height: 1.1;
-      margin-bottom: 2px;
     }
 
     .card-value.savings {
@@ -623,9 +624,7 @@
     .controls {
       display: flex;
       gap: 12px;
-      margin-top: 32px;
-      padding-top: 24px;
-      border-top: 1px solid var(--border-color);
+      margin-top: 28px;
       opacity: 0;
       animation: fadeSlideDown 0.6s ease 0.8s forwards;
     }
@@ -770,247 +769,6 @@
       padding: 8px 12px;
     }
 
-    /* === Payment Modal === */
-    .modal-overlay {
-      position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.7);
-      backdrop-filter: blur(6px);
-      -webkit-backdrop-filter: blur(6px);
-      z-index: 1000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.3s ease;
-    }
-
-    .modal-overlay.visible {
-      opacity: 1;
-      pointer-events: all;
-    }
-
-    .modal {
-      background: var(--bg-primary);
-      border: 1px solid var(--glass-border);
-      border-radius: 20px;
-      padding: 32px;
-      width: 460px;
-      max-width: 90vw;
-      max-height: 85vh;
-      overflow-y: auto;
-      box-shadow: 0 24px 80px rgba(0, 0, 0, 0.6);
-      transform: translateY(20px) scale(0.95);
-      transition: transform 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
-    }
-
-    .modal-overlay.visible .modal {
-      transform: translateY(0) scale(1);
-    }
-
-    .modal-title {
-      font-size: 18px;
-      font-weight: 700;
-      margin-bottom: 6px;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
-
-    .modal-subtitle {
-      font-size: 13px;
-      color: var(--text-secondary);
-      margin-bottom: 24px;
-      line-height: 1.4;
-    }
-
-    .modal-close {
-      position: absolute;
-      top: 16px;
-      right: 16px;
-      background: none;
-      border: none;
-      color: var(--text-muted);
-      font-size: 20px;
-      cursor: pointer;
-      padding: 4px 8px;
-      border-radius: 6px;
-      transition: all 0.2s ease;
-    }
-
-    .modal-close:hover {
-      color: var(--text-primary);
-      background: var(--bg-tertiary);
-      transform: none;
-      box-shadow: none;
-    }
-
-    .pay-option {
-      background: var(--bg-secondary);
-      border: 1px solid var(--border-color);
-      border-radius: 14px;
-      padding: 18px;
-      margin-bottom: 14px;
-      transition: all 0.2s ease;
-      cursor: pointer;
-    }
-
-    .pay-option:hover {
-      border-color: rgba(255, 255, 255, 0.1);
-      background: var(--bg-tertiary);
-    }
-
-    .pay-option-header {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      margin-bottom: 8px;
-    }
-
-    .pay-option-icon {
-      font-size: 22px;
-    }
-
-    .pay-option-name {
-      font-size: 14px;
-      font-weight: 600;
-    }
-
-    .pay-option-tag {
-      font-size: 10px;
-      font-weight: 600;
-      text-transform: uppercase;
-      padding: 2px 8px;
-      border-radius: 6px;
-      margin-left: auto;
-    }
-
-    .pay-option-tag.preferred {
-      background: rgba(63, 185, 80, 0.15);
-      color: var(--accent-green);
-    }
-
-    .pay-option-tag.coming {
-      background: rgba(88, 166, 255, 0.15);
-      color: var(--accent-blue);
-    }
-
-    .pay-option-desc {
-      font-size: 12px;
-      color: var(--text-secondary);
-      line-height: 1.4;
-    }
-
-    .usdc-address-box {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      margin-top: 10px;
-      background: var(--bg-primary);
-      border: 1px solid var(--border-color);
-      border-radius: 8px;
-      padding: 10px 12px;
-    }
-
-    .usdc-address-box code {
-      font-family: 'SF Mono', 'Fira Code', monospace;
-      font-size: 11px;
-      color: var(--accent-cyan);
-      flex: 1;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
-
-    .copy-btn {
-      background: var(--accent-green-dim);
-      color: white;
-      border: none;
-      padding: 6px 14px;
-      border-radius: 6px;
-      font-size: 11px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: all 0.2s ease;
-      white-space: nowrap;
-    }
-
-    .copy-btn:hover {
-      background: var(--accent-green);
-      transform: none;
-      box-shadow: none;
-    }
-
-    .copy-btn.copied {
-      background: var(--accent-green);
-    }
-
-    .network-badge {
-      display: inline-block;
-      font-size: 10px;
-      font-weight: 600;
-      padding: 2px 6px;
-      border-radius: 4px;
-      background: rgba(88, 166, 255, 0.15);
-      color: var(--accent-blue);
-      margin-left: 4px;
-    }
-
-    .pay-link-btn {
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      margin-top: 10px;
-      padding: 10px 20px;
-      border-radius: 10px;
-      font-size: 13px;
-      font-weight: 600;
-      text-decoration: none;
-      transition: all 0.2s ease;
-      border: none;
-      cursor: pointer;
-    }
-
-    .pay-link-btn.bmc {
-      background: #FFDD00;
-      color: #000;
-    }
-
-    .pay-link-btn.bmc:hover {
-      background: #ffeb3b;
-      transform: translateY(-1px);
-      box-shadow: 0 4px 16px rgba(255, 221, 0, 0.3);
-    }
-
-    .pay-link-btn.manual {
-      background: var(--bg-tertiary);
-      color: var(--text-primary);
-      border: 1px solid var(--border-color);
-    }
-
-    .pay-link-btn.manual:hover {
-      background: var(--border-color);
-      transform: translateY(-1px);
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-    }
-
-    .modal-divider {
-      border: none;
-      border-top: 1px solid var(--border-color);
-      margin: 20px 0;
-    }
-
-    .manual-ack-section {
-      text-align: center;
-    }
-
-    .manual-ack-section p {
-      font-size: 12px;
-      color: var(--text-muted);
-      margin-bottom: 10px;
-    }
-
     /* === Footer === */
     .footer {
       text-align: center;
@@ -1090,6 +848,7 @@
 </head>
 
 <body>
+  <canvas id="bg-canvas"></canvas>
   <div class="container">
     <header>
       <h1>
@@ -1158,62 +917,11 @@
         <div class="card-sub" id="billingSub">Loading...</div>
         <div id="graceWarning" class="grace-warning" style="display:none;"></div>
         <div class="billing-actions">
-          <button id="btnPaymentModal">💳 Make Payment</button>
+          <button id="btnAckPayment">💳 Acknowledge Payment</button>
         </div>
       </div>
     </div>
 
-    <!-- Payment Modal -->
-    <div class="modal-overlay" id="paymentModal">
-      <div class="modal" style="position: relative;">
-        <button class="modal-close" id="modalClose">✕</button>
-        <div class="modal-title">💳 Support ClawRoute Pro</div>
-        <div class="modal-subtitle">Choose a payment method. Your suggested payment is <strong
-            id="modalSuggested">$9.00/mo</strong> based on your savings.</div>
-
-        <!-- USDC Direct -->
-        <div class="pay-option" id="payUsdc" style="display:none;">
-          <div class="pay-option-header">
-            <span class="pay-option-icon">💎</span>
-            <span class="pay-option-name">USDC (Ethereum)</span>
-            <span class="pay-option-tag preferred">Preferred</span>
-          </div>
-          <div class="pay-option-desc">Send USDC directly to our wallet on <span class="network-badge">ETH
-              Mainnet</span></div>
-          <div class="usdc-address-box">
-            <code id="usdcAddr"></code>
-            <button class="copy-btn" id="btnCopyUsdc">📋 Copy</button>
-          </div>
-        </div>
-
-        <!-- Buy Me a Coffee -->
-        <div class="pay-option" id="payBmc" style="display:none;">
-          <div class="pay-option-header">
-            <span class="pay-option-icon">☕</span>
-            <span class="pay-option-name">Buy Me a Coffee</span>
-          </div>
-          <div class="pay-option-desc">Quick payment via card or PayPal</div>
-          <a class="pay-link-btn bmc" id="bmcLink" href="#" target="_blank">☕ Buy Me a Coffee</a>
-        </div>
-
-        <!-- NOWPayments -->
-        <div class="pay-option" id="payNow" style="display:none;">
-          <div class="pay-option-header">
-            <span class="pay-option-icon">🪙</span>
-            <span class="pay-option-name">Crypto (NOWPayments)</span>
-          </div>
-          <div class="pay-option-desc">Pay with BTC, ETH, SOL, or 200+ other cryptocurrencies</div>
-          <button class="pay-link-btn manual" id="btnNowPayments">🪙 Pay with Crypto</button>
-        </div>
-
-        <!-- Manual Acknowledgment -->
-        <hr class="modal-divider">
-        <div class="manual-ack-section">
-          <p>Already paid? Record it here:</p>
-          <button class="pay-link-btn manual" id="btnAckManual">✅ I've Already Paid</button>
-        </div>
-      </div>
-    </div>
     <!-- Tier Breakdown -->
     <div class="section" id="sectionTiers">
       <div class="section-header">
@@ -1488,8 +1196,8 @@
         billingSub.textContent = 'Limited routing on Free plan';
       }
 
-      if (data.graceActive && data.graceUntil) {
-        const graceEnd = new Date(data.graceUntil).toLocaleDateString();
+      if (data.graceActive) {
+        const graceEnd = new Date(data.graceUntil || '').toLocaleDateString();
         graceWarning.innerHTML = `⏳ Trial period active until ${graceEnd}. All Pro features enabled.`;
         graceWarning.style.display = 'block';
         planBadge.className = 'plan-badge pro';
@@ -1499,87 +1207,11 @@
       }
     }
 
-    // === Payment Modal ===
-    const paymentModal = document.getElementById('paymentModal');
-    const modalClose = document.getElementById('modalClose');
-
-    document.getElementById('btnPaymentModal').addEventListener('click', () => {
-      paymentModal.classList.add('visible');
-      loadPaymentLinks();
-    });
-
-    modalClose.addEventListener('click', () => {
-      paymentModal.classList.remove('visible');
-    });
-
-    paymentModal.addEventListener('click', (e) => {
-      if (e.target === paymentModal) paymentModal.classList.remove('visible');
-    });
-
-    // Load payment links from API
-    async function loadPaymentLinks() {
-      try {
-        const [linksRes, billingRes] = await Promise.all([
-          fetch('/billing/paylinks'),
-          fetch('/billing/summary')
-        ]);
-        const links = await linksRes.json();
-        const billing = await billingRes.json();
-
-        // Update suggested amount
-        document.getElementById('modalSuggested').textContent = `$${billing.suggestedUsd?.toFixed(2) ?? '9.00'}/mo`;
-
-        // USDC
-        if (links.usdcAddress) {
-          document.getElementById('payUsdc').style.display = 'block';
-          document.getElementById('usdcAddr').textContent = links.usdcAddress;
-        }
-
-        // Buy Me a Coffee
-        if (links.buyMeCoffeeUrl) {
-          document.getElementById('payBmc').style.display = 'block';
-          document.getElementById('bmcLink').href = links.buyMeCoffeeUrl;
-        }
-
-        // NOWPayments
-        if (links.nowPaymentsEnabled) {
-          document.getElementById('payNow').style.display = 'block';
-        }
-      } catch (error) {
-        console.error('Failed to load payment links:', error);
-      }
-    }
-
-    // Copy USDC address
-    document.getElementById('btnCopyUsdc').addEventListener('click', async () => {
-      const addr = document.getElementById('usdcAddr').textContent;
-      const btn = document.getElementById('btnCopyUsdc');
-      try {
-        await navigator.clipboard.writeText(addr);
-        btn.textContent = '✅ Copied!';
-        btn.classList.add('copied');
-        setTimeout(() => {
-          btn.textContent = '📋 Copy';
-          btn.classList.remove('copied');
-        }, 2000);
-      } catch {
-        // Fallback for older browsers
-        const textarea = document.createElement('textarea');
-        textarea.value = addr;
-        document.body.appendChild(textarea);
-        textarea.select();
-        document.execCommand('copy');
-        document.body.removeChild(textarea);
-        btn.textContent = '✅ Copied!';
-        setTimeout(() => { btn.textContent = '📋 Copy'; }, 2000);
-      }
-    });
-
-    // Manual acknowledgment
-    document.getElementById('btnAckManual').addEventListener('click', async () => {
+    // Payment acknowledgment
+    document.getElementById('btnAckPayment').addEventListener('click', async () => {
       const amount = prompt('Enter payment amount (USD):', '9');
       if (!amount) return;
-      const method = prompt('Payment method used (usdc/bmc/other):', 'usdc');
+      const method = prompt('Payment method (stripe/usdc/manual):', 'manual');
       if (!method) return;
 
       try {
@@ -1593,43 +1225,70 @@
           })
         });
         alert('✅ Payment acknowledged! Thank you for supporting ClawRoute.');
-        paymentModal.classList.remove('visible');
         fetchBilling();
       } catch (error) {
         alert('Failed to acknowledge payment');
       }
     });
 
-    // NOWPayments button
-    document.getElementById('btnNowPayments')?.addEventListener('click', async () => {
-      const btn = document.getElementById('btnNowPayments');
-      const origText = btn.textContent;
-      btn.textContent = '⏳ Creating invoice...';
-      btn.disabled = true;
+    // === Three.js Background Animation ===
+    function initThreeJs() {
+      const canvas = document.getElementById('bg-canvas');
+      const renderer = new THREE.WebGLRenderer({ canvas, alpha: true, antialias: true });
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      renderer.setPixelRatio(window.devicePixelRatio);
 
-      try {
-        const res = await fetch('/billing/nowpayments/invoice', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({})
-        });
-        const data = await res.json();
+      const scene = new THREE.Scene();
+      const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+      camera.position.z = 30;
 
-        if (data.invoiceUrl) {
-          window.open(data.invoiceUrl, '_blank');
-          btn.textContent = '✅ Invoice opened!';
-          setTimeout(() => { btn.textContent = origText; btn.disabled = false; }, 3000);
-        } else {
-          btn.textContent = '❌ Failed';
-          setTimeout(() => { btn.textContent = origText; btn.disabled = false; }, 2000);
-        }
-      } catch {
-        btn.textContent = '❌ Error';
-        setTimeout(() => { btn.textContent = origText; btn.disabled = false; }, 2000);
+      const particlesGeometry = new THREE.BufferGeometry();
+      const particlesCount = 400;
+      const posArray = new Float32Array(particlesCount * 3);
+
+      for (let i = 0; i < particlesCount * 3; i++) {
+        posArray[i] = (Math.random() - 0.5) * 80;
       }
-    });
+
+      particlesGeometry.setAttribute('position', new THREE.BufferAttribute(posArray, 3));
+      const material = new THREE.PointsMaterial({
+        size: 0.2,
+        color: 0x6366f1,
+        transparent: true,
+        opacity: 0.8,
+      });
+
+      const particlesMesh = new THREE.Points(particlesGeometry, material);
+      scene.add(particlesMesh);
+
+      // Lines connecting close particles
+      const lineMaterial = new THREE.LineBasicMaterial({ color: 0x6366f1, transparent: true, opacity: 0.15 });
+      const linesGeometry = new THREE.BufferGeometry();
+      const linesMesh = new THREE.LineSegments(linesGeometry, lineMaterial);
+      scene.add(linesMesh);
+
+      function animate() {
+        requestAnimationFrame(animate);
+
+        particlesMesh.rotation.y += 0.0005;
+        particlesMesh.rotation.x += 0.0002;
+
+        // Optional: Dynamic line updates (expensive, keeping simple for performance)
+
+        renderer.render(scene, camera);
+      }
+
+      animate();
+
+      window.addEventListener('resize', () => {
+        camera.aspect = window.innerWidth / window.innerHeight;
+        camera.updateProjectionMatrix();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+      });
+    }
 
     // Initial load
+    initThreeJs();
     animateOnView();
     fetchStats();
     fetchBilling();
